[table] fix: collapse pagination for long lists (#312)

--- a/src/components/Table/styles.css
+++ b/src/components/Table/styles.css
@@ -21,6 +21,8 @@
   padding: 0.2rem 0.5rem;
   border-radius: 0.3rem;
   margin: 0 0.3rem;
+  width: 2.5rem;
+  text-align: center;
   user-select: none;
   color: var(--table-page-arrow-text-color);
 }
